@@ -79,7 +79,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_tools.png" class="rectangle_image" alt="">
                                         <figcaption>
                                             <h2>Tools</h2>
-                                            <p>The tools under this category serves to help the user increase productivity by automating repetitive tasks. More tools will be added to this category in the future.</p>
+                                            <p>The tools under this category serves to help the user increase productivity by automating common tasks. More tools will be added to this category in the future.</p>
                                             <footer class="read_more"><a href="tools.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
