@@ -29,8 +29,21 @@
                                 <figure><img src="https://dmctruong.000webhostapp.com/images/tools_github.png" alt="Git Bash Scripts">
                                     <figcaption>
                                         <h4>Git Bash Scripts</h4>
-                                        <p>Some simple scripts created for Git Bash to help speed up the work flow.</p>
+                                        <p>Some simple scripts created for Git Bash to help speed up common tasks.</p>
                                         <footer class="tools_read_more"><a href="tools_scripts.html">Read More &raquo;</a></footer>
+                                    </figcaption>
+                                </figure>
+                            </article>                               
+                        </li>
+                    </ul>
+					<ul>
+                        <li>
+                            <article class="clear">
+                                <figure><img src="https://dmctruong.000webhostapp.com/images/tools_color.png" alt="Git Bash Scripts">
+                                    <figcaption>
+                                        <h4>jQuery Color Picker</h4>
+                                        <p>A webpage implementation of <a href="https://bgrins.github.io/spectrum/" style="background: #24292e; color: #19e3ff;">bgrins's jQuery Color Picker</a>, "Spectrum."</p>
+                                        <footer class="tools_read_more"><a href="tools_color.html">Read More &raquo;</a></footer>
                                     </figcaption>
                                 </figure>
                             </article>                               
