@@ -26,7 +26,7 @@
             <!--  About -->
             <div class="container">
                 <h2 style="text-transform: none;">jQuery Color Picker</h2>
-                <p align="center" style="text-align: justify">I use a color picker everyday for a lot of my projects. For ease of access, I added <a href="https://github.com/bgrins">bgrins</a>'s jQuery Color Picker, "Spectrum," onto the site since I always have it open and building it. If you would like more information about the jQuery color picker, feel free to visit <a href="https://bgrins.github.io/spectrum/">Spectrum's project page.</a></p>
+                <p align="center" style="text-align: justify">A color picker is one of the many tools that I use often in my projects. I added <a href="https://github.com/bgrins">bgrins</a>'s jQuery Color Picker, "Spectrum," onto the web site for ease of access since I use it so often. If you would like more information about the jQuery color picker, feel free to visit <a href="https://bgrins.github.io/spectrum/">Spectrum's project page.</a></p>
                 <input type='text' id="full"/>
             </div>
 
